--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,4 +43,4 @@ jobs:
         uses: actions/checkout@v2.3.3
 
       - name: Build containers
-        run: docker compose build
+        run: docker-compose build
