--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,3 +28,5 @@ jobs:
 
       - name: Release
         run: heroku container:release web -a ${{ secrets.HEROKU_APP }}
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_TOKEN }}
